cargo-features = ["profile-rustflags"]

[package]
name = "shr_parser"
description = "Parses sweeps from a Signal Hound Spike file."
version = "1.0.2"
edition = "2021"
categories = ["parser-implementations", "parsing", "science", "data-structures"]
license = "GPL-3.0-only"
authors = ["Lasse Nielsen <lasse@xerrion.dk>"]

[dependencies]
byteorder = "1.5.0"
serde = { version = "1.0.204", features = ["derive"] }
ndarray = "0.15.6"
rayon = "1.10.0"
memmap = "0.7.0"


[profile.release]
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[profile.release-speed]
inherits = "release"
opt-level = 3       # Optimize for speed.

[profile.release-min-size]
inherits = "release"
opt-level = "z"     # Optimize for size.
